# OrgeMage

./: .gitignore  GEMINI.md  LICENSE  README.md  orgemage-agents.json  pyproject.toml
docs/: acp-orchestrator-architecture.md  python-sdk-recommendation.md  system-diagrams.md
gemini_src_debug/: acpClient.js  core_session_v2.js
scripts/: smoke_acpx.sh
src/orgemage/: __init__.py  catalog.py  cli.py  codex_app_server.py  debug.py  downstream.py  execution_graph.py  metadata.py  models.py  orchestrator.py  planning.py  scheduler.py  state.py
src/orgemage.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/orgemage/acp/: __init__.py  downstream_client.py  manager.py
src/orgemage/adapters/: acp_sdk.py
tests/: test_acp_downstream_connector.py  test_acp_runtime.py  test_acp_stdio_smoke.py  test_catalog.py  test_cli.py  test_codex_app_server.py  test_downstream_manager.py  test_orchestrator.py  test_planning.py  test_state.py
